--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <i class="fas fa-code"></i>
                         View Projects
                     </a>
-                    <a href="#" class="btn btn-secondary">
+                    <a href="https://drive.google.com/file/d/15eEmWOnTDfu8PaxAVK6DPie7R78nsu48/view?usp=sharing" target="_blank" class="btn btn-secondary">
                         <i class="fas fa-download"></i>
                         Download Resume
                     </a>
@@ -85,7 +85,7 @@
             <div class="about-content">
                 <div class="about-stats">
                     <div class="stat-card">
-                        <div class="stat-number">15+</div>
+                        <div class="stat-number">10+</div>
                         <div class="stat-label">Projects Completed</div>
                     </div>
                     <div class="stat-card">
@@ -93,11 +93,11 @@
                         <div class="stat-label">DSA Problems Solved</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">3.8</div>
+                        <div class="stat-number">8.5</div>
                         <div class="stat-label">CGPA</div>
                     </div>
                     <div class="stat-card">
-                        <div class="stat-number">2+</div>
+                        <div class="stat-number">4+</div>
                         <div class="stat-label">Years Coding</div>
                     </div>
                 </div>
@@ -353,7 +353,7 @@
                 My journey through various projects, competitions, and learning experiences.
             </p>
             <div class="timeline">
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <h3 class="experience-title">Software Development Intern</h3>
@@ -365,9 +365,9 @@
                             through code optimization and database query improvements.
                         </p>
                     </div>
-                </div>
+                </div> -->
 
-                <div class="timeline-item">
+                <!-- <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
                         <h3 class="experience-title">Hackathon Winner</h3>
@@ -379,7 +379,7 @@
                             Implemented machine learning algorithms for crop prediction and optimization.
                         </p>
                     </div>
-                </div>
+                </div> -->
 
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
@@ -402,9 +402,9 @@
                         <div class="experience-company">Codeforces • LeetCode</div>
                         <div class="experience-date">2023 - Present</div>
                         <p class="experience-description">
-                            Achieved Specialist rating on Codeforces (1400+) and solved 500+ problems on LeetCode. 
-                            Regularly participate in weekly contests and have secured top 100 positions in several competitions. 
-                            Strong foundation in algorithms and data structures.
+                            Solved 150+ problems on LeetCode with a contest rating of 1400+.
+Actively participate in weekly contests on CodeChef and practice regularly on Codeforces.
+Built a strong foundation in data structures and algorithms through consistent problem-solving.
                         </p>
                     </div>
                 </div>
@@ -412,13 +412,11 @@
                 <div class="timeline-item">
                     <div class="timeline-dot"></div>
                     <div class="timeline-content">
-                        <h3 class="experience-title">Technical Lead</h3>
-                        <div class="experience-company">College Coding Club</div>
-                        <div class="experience-date">Aug 2023 - Present</div>
+                        <h3 class="experience-title">Development Team</h3>
+                        <div class="experience-company">MIC</div>
+                        <div class="experience-date">July 2024 - June 2025</div>
                         <p class="experience-description">
-                            Leading technical workshops and mentoring junior students in programming and development. 
-                            Organized multiple coding competitions and hackathons. Successfully increased club membership 
-                            by 40% and established partnerships with local tech companies.
+                            As a member of the Microsoft Innovations, I was part of the development team during my tenure. While the club's activities were limited, I contributed to the organization of an event during Vibrance and completed five foundational courses on the Microsoft Learn platform, covering core concepts in cloud computing and software development.
                         </p>
                     </div>
                 </div>
@@ -442,9 +440,9 @@
                         I'm actively seeking internship opportunities at product-based companies.
                     </p>
                     <div class="contact-links">
-                        <a href="mailto:your.email@example.com" class="contact-link">
+                        <a href="mailto:divyanshm.code@gmail.com" class="contact-link">
                             <i class="fas fa-envelope"></i>
-                            your.email@example.com
+                            divyanshm.code@gmail.com
                         </a>
                         <a href="tel:+91-XXXXXXXXXX" class="contact-link">
                             <i class="fas fa-phone"></i>
